Fixed some layout issues

--- a/src/PhotoBox.css
+++ b/src/PhotoBox.css
@@ -1,5 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Special+Elite&family=Amatic+SC&family=Architects+Daughter&family=Arvo&family=Bangers&family=Indie+Flower&family=Luckiest+Guy&family=Pacifico&family=Parisienne&family=Permanent+Marker&family=RocknRoll+One&family=Satisfy&family=Special+Elite&family=Yellowtail&display=swap" rel="stylesheet"');
 
+#printScreenInstructions {
+    font-size:15px;
+    margin-top:-10px;
+    font-family: 'Londrina Solid';
+    font-weight:400;
+    letter-spacing: 0.7px;
+}
+
+#downIcon {
+    width:30px;
+    height:40px;   
+    margin-bottom:10px;
+}
+
 #Collage p {
     margin-top:20px;
     margin-bottom: 5px;
@@ -15,6 +29,11 @@
     padding-right:20px;
     width:auto;
     background-size: cover;
+    border: 1px solid black;
+}
+
+#collageTitle {
+    padding-bottom:20px;
 }
 
 #PhotoBoxContainer{
@@ -54,6 +73,7 @@
     grid-area: customiseInstructions;
     margin-bottom:20px;
     border: 1px solid black;
+    border-radius: 5%;
     justify-content: space-around;
 }
 
@@ -95,23 +115,35 @@
 
 #popUpDialog{
     position: fixed;
-    top: 18vh;
-    left:33vw;
+    top: 20%;
+    left:calc(50% - 200px);
     align-items:center;
     background-color: white;
     border: 1px solid black;  
     width:400px;
-    height:240px;
+    height:290px;
     padding:10px;
     display:grid;
     grid-template-columns: 125px 275px;
-    grid-template-areas: "showBook showOptions";
+    grid-template-areas: "closeIconDiv closeIconDiv" "showBook showOptions";
     z-index: 3;
     border-radius: 10px;
 }
 
 #popUpDialog h3 {
     margin-bottom: 5px;
+}
+
+#closeIconDiv {
+    grid-area: closeIconDiv
+}
+
+#closeIcon {
+    cursor: pointer;
+    z-index: 2;
+    margin-bottom:10px;
+    max-height: 30px;
+    margin-bottom:20px;
 }
 
 #showBook {
@@ -165,14 +197,6 @@ button {
 
 #iconHolder {
     position:relative;
-}
-
-#closeIcon {
-    position:fixed;
-    top: 20vh;
-    left:63vw;
-    cursor: pointer;
-    z-index: 2;
 }
 
 .optionIcon {
