--- a/src/PhotoBoxItem.css
+++ b/src/PhotoBoxItem.css
@@ -18,7 +18,7 @@
     border: 1px solid black;
     background-color:white;
     transform: rotate(-15deg);
-    width:80px;
+    width:90px;
     padding:0px;
 }
 
