--- a/src/SearchBar.css
+++ b/src/SearchBar.css
@@ -56,7 +56,8 @@ h3 {
     margin-top:20px;
     font-size: 20px;
     margin-right:5px;
-    font-family: 'Open Sans', Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Londrina Solid';
+    font-weight:300;
 }
 
 button{
